# my_toy_compiler

./: .gitignore  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE  Makefile  README.md  codegen.cpp  codegen.h  corefn.cpp  example.txt  main.cpp  native.cpp  node.h  parser.y  slot.cpp  tokens.l  types.h
.github/workflows/: MAKE_TEST.yml
src/: codegen.cpp  corefn.cpp  main.cpp  tokens.l
